--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "gatsby": "^3.0.1",
+    "gatsby-cli": "^3.1.0",
     "gatsby-plugin-google-analytics": "^3.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sass": "^4.1.0",
